--- a/src/main/resources/META-INF/resources/consulta/historico_pedidos.xhtml
+++ b/src/main/resources/META-INF/resources/consulta/historico_pedidos.xhtml
@@ -13,6 +13,41 @@
     <ui:define name="content">
         <p:panel header="HISTÓRICO DE PEDIDOS"
                  styleClass="custom-panel">
+
+            <p:toolbar>
+                <p:toolbarGroup>
+                    <p:outputLabel value="Fecha Desde:"
+                                   styleClass="texto_negrita"/>
+                    <p:spacer width="10px" />
+                    <p:calendar id="fechaDesde" value="#{historicoPedidosBean.fechaDesde}"
+                                pattern="yyyy-MM-dd" />
+                    <p:spacer width="10px" />
+                    <p:outputLabel value="Fecha Hasta:"
+                                   styleClass="texto_negrita"/>
+                    <p:spacer width="10px" />
+                    <p:calendar id="fechaHasta" value="#{historicoPedidosBean.fechaHasta}"
+                                pattern="yyyy-MM-dd" />
+                    <p:spacer width="10px" />
+                    <p:outputLabel value="Estado:"
+                                   styleClass="texto_negrita"/>
+                    <p:selectOneMenu value="#{historicoPedidosBean.estadoSeleccionado}">
+                        <f:selectItem itemLabel="Todos" itemValue=""/>
+                        <f:selectItem itemLabel="GENERADO" itemValue="1"/>
+                        <f:selectItem itemLabel="CHEQUE GENERADO" itemValue="2"/>
+                        <f:selectItem itemLabel="CHEQUE VALIDADO" itemValue="7"/>
+                        <f:selectItem itemLabel="TRANSPORTE ASIGNADO" itemValue="8"/>
+                        <f:selectItem itemLabel="DESPACHADO" itemValue="5"/>
+                        <f:selectItem itemLabel="ANULADO" itemValue="4"/>
+                    </p:selectOneMenu>
+
+                    <p:spacer width="10px" />
+                    <p:commandButton value="Buscar"
+                                     icon="pi pi-search"
+                                     action="#{historicoPedidosBean.filtrarPedidos}"
+                                     update="tblPedidos" />
+                </p:toolbarGroup>
+            </p:toolbar>
+            <br/>
             <p:dataTable var="pedido"
                          paginator="true"
                          rows="10"
@@ -33,14 +68,7 @@
                 </p:column>
 
                 <p:column headerText="Fecha Registro"
-                          width="10%"
-                          field="fechaRegistro"
-                          filterBy="#{pedido.fechaRegistro}"
-                          sortBy="#{pedido.fechaRegistro}"
-                          filterPlaceholder="Fecha Registro">
-                    <f:facet name="filter">
-                        <p:datePicker onchange="PF('wgPedido').filter()"/>
-                    </f:facet>
+                          width="10%">
                     <h:outputLabel value="#{pedido.fechaRegistro}">
                         <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" type="localDate" />
                     </h:outputLabel>
@@ -87,14 +115,14 @@
                 <p:column headerText="Estado"
                           width="5%"
                           style="text-align: right">
-                    <h:outputText value="#{pedido.obtenerEstadoPrioritario()}" />
+                    <h:outputText value="#{pedido.estadoPrioritario.nombre}" />
                 </p:column>
 
             </p:dataTable>
         </p:panel>
     </ui:define>
     <ui:define name="dialog">
-        <p:dialog header="Cupo Pedido"
+        <p:dialog header="Información de Pedido"
                   id="dlgCupoId"
                   widgetVar="dlgCupo"
                   minHeight="40"
@@ -138,7 +166,7 @@
                                  style="width: 100%">
                         <p:column headerText="Fecha">
                             <h:outputText value="#{estado.fechaRegistro}">
-                                <f:convertDateTime timeZone="#{parametrosApplication.timeZone}" pattern="#{parametrosApplication.formatoFechaHoraSMS}"/>
+                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" type="localDate" />
                             </h:outputText>
                         </p:column>
                         <p:column headerText="Responsable">
@@ -226,7 +254,7 @@
                         </p:column>
                     </p:dataTable>
                 </p:tab>
-                <p:tab title="Header I">
+                <p:tab title="Guia de Remisión">
 
                 </p:tab>
             </p:tabView>
