--- a/src/main/resources/META-INF/resources/procesos/pedidos_admin.xhtml
+++ b/src/main/resources/META-INF/resources/procesos/pedidos_admin.xhtml
@@ -27,6 +27,7 @@
                                      value="Generar Cheque"
                                      disabled="#{pedidosAdminBean.pedidoSelected.idPedido eq null}"
                                      process="@this"
+                                     update="formulario:grMensajes"
                                      action="#{pedidosAdminBean.chooseCheque}">
                         <p:ajax event="dialogReturn"
                                 listener="#{pedidosAdminBean.onChequeChosen}"
@@ -151,7 +152,7 @@
                 <p:column headerText="Estado"
                           width="5%"
                           style="text-align: right">
-                    <h:outputText value="#{pedido.obtenerEstadoPrioritario()}" />
+                    <h:outputText value="#{pedido.estadoPrioritario.nombre}" />
                 </p:column>
 
             </p:dataTable>
